--- a/UVWORK/try1/pyproject.toml
+++ b/UVWORK/try1/pyproject.toml
@@ -6,6 +6,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "typer>=0.12.5",
+    "requests",
+    "fastapi>=0.115.0",
+    "jupyter>=1.1.1",
+    "pandas>=2.2.3",
 ]
 
 [tool.uv]
