--- a/UVWORK/myappu1/pyproject.toml
+++ b/UVWORK/myappu1/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "myappu1"
 version = "0.1.0"
-description = "Add your description here"
+description = "SmellyPanty"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
