--- a/ytz/WAWPP/v1/pyproject.toml
+++ b/ytz/WAWPP/v1/pyproject.toml
@@ -5,5 +5,6 @@ description = "Version 1 of ass"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "playwright>=1.47.0",
     "rich>=13.8.1",
 ]
